--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,18 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = validate
 
 # Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# Specify if application/hal+json responses should be sent to requests that accept application/json.
+spring.hateoas.use-hal-as-default-json-media-type=false
+
+#spring.data.rest.defaultMediaType=application/json
+
+
+
+
+
+
